@@ -5,6 +5,7 @@
 *************************************************************************************************************
 
 added/fixed: (dd-mm-yyyy) (please specify date in CET)
+ - 15-07-2005 changed: when entering a zero in numeric dialog, mode ip adress, it jumps to the next block
  - 15-07-2005 fixed: progress dialog can be closes via back even if the operation is not canceled
  - 15-07-2005 changed: autodetect ping interval now shows secs in the spin control
  - 15-07-2005 fixed: if the number keys on the remote have global mapped actions no numbers can be entered in numeric dialog
